# VolumeProjectorPlugin

./: CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
DVRTransferFunction/: CMakeLists.txt  PluginInfo.json
DVRTransferFunction/src/: DatasetsAction.cpp  GradientPickerAction.cpp  InteractiveShape.cpp  InteractiveShape.h  MaterialTransitionsAction.cpp  MaterialTransitionsAction.h  SelectionAction.cpp  TransferFunctionPlugin.cpp  TransferFunctionPlugin.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h
DVRViewPlugin/: CMakeLists.txt  PluginInfo.json
DVRViewPlugin/res/: ViewerResources.qrc
DVRViewPlugin/src/: DVRViewPlugin.cpp  DVRViewPlugin.h  DVRWidget.cpp  DVRWidget.h  GlobalSettingsAction.h  VolumeRenderer.cpp  VolumeRenderer.h
DVRVolumeData/: CMakeLists.txt  PluginInfo.json
DVRVolumeData/DVRVolumeData/: Size3D.h  Volume.h  VolumeData.cpp  VolumeData.h  Volumes.cpp  Volumes.h
DVRVolumeData/src/: VolumeData.cpp  VolumeData.h  Volumes.cpp
DVRVolumeLoader/: CMakeLists.txt  PluginInfo.json
DVRVolumeLoader/src/: DVRVolumeLoader.cpp  DVRVolumeLoader.h
